# ECDSA-Bazooka

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  COMMANDS.md  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
data/: msb_16b_500.txt  msb_16b_800.txt  test_lsb_8b_400.txt
docs/superpowers/plans/: 2026-07-18-documentation-refresh.md
docs/superpowers/specs/: 2026-07-18-documentation-refresh-design.md
ecdsa_nonce_recovery/: CLAUDE.md  COMMANDS.md  COMPLETE_FIX_INSTRUCTIONS.txt  HANDOFF.md  diagnose_profiler.py
ecdsa_nonce_recovery/data/: 5000.txt  control_unbiased_800.txt  msb_12b_800.txt  msb_8b_3k.txt  test_12b_500.txt  test_16b_400.txt  test_8b_1200.txt  test_lsb_12b_500.txt  test_small.txt
ecdsa_nonce_recovery/include/: bias_profiler.h  fft_solver.h  lattice_solver.h  parser.h  signature.h  telemetry.h  types.h  utils.h
ecdsa_nonce_recovery/scripts/: generate_mock_signatures.py
ecdsa_nonce_recovery/src/: bias_profiler.cpp  lattice_solver.cpp  main.cpp  pair_computation.cpp  secp256k1.cpp  telemetry.cpp  verifier.cpp
ecdsa_nonce_recovery/tests/: e2e_recovery_test.sh  fplll_sanity.cpp  unit_tests.cpp
include/: bias_profiler.h  fork_pool.h  last_resort.h  lattice_solver.h  pair_computation.h  parser.h  predicate_shim.h  recovery_engine.h  secp256k1.h  sieve_config.h  sieve_estimator.h  types.h  utils.h  verifier.h
scripts/: generate_mock_signatures.py  measure_norm_rank.py  run_fixtures_tests.py
scripts/fixtures/: catalog.py  composer.py  primitives.py  runner.py
scripts/fixtures/tests/: test_catalog.py  test_composer.py  test_cross_parse.py  test_nopubkey_capped.py  test_primitives.py  test_ransac_noise_recovery.py  test_runner.py  test_shared_prefix_recovery.py
src/: bias_profiler.cpp  fft_solver.cpp  fork_pool.cpp  last_resort.cpp  lattice_solver.cpp  main.cpp  pair_computation.cpp  parser.cpp  predicate_shim.cpp  recovery_engine.cpp  route_planner.cpp  secp256k1.cpp  sieve_config.cpp  sieve_estimator.cpp  telemetry.cpp  utils.cpp  verifier.cpp
tests/: cli_validation_test.sh  e2e_recovery_test.sh  ecc_diff_tool.cpp  ecc_differential_test.py  unit_tests.cpp
worker/: README.md  bootstrap.sh  build_shim.sh  ecdsa_fixture.py  predicate_shim.py  test_predicate_shim.py  test_worker.py  worker.py  worker_cli.py
